Fixed text-align on  overlay text

--- a/assets/style.css
+++ b/assets/style.css
@@ -440,5 +440,6 @@ button {
 	#brawl_overlay_buttons {
 		display: flex;
 		flex-direction: column;
+		text-align: center;
 	}
 }
